fixed spacing, added link to asulabs

--- a/index.css
+++ b/index.css
@@ -25,7 +25,3 @@ hr{
   height: .1rem;
   background: black; 
 }
-
-.container{
-  padding: 0px 50px;
-}
